--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0": "^2.16.0",
     "auth0-js": "^9.8.0",
     "auth0-lock": "^11.10.0",
     "express": "^4.16.3",
